# sample-py

./: .env.local  .env.sample  .flake8  .gitattributes  .gitignore  .pip-audit.toml  .pipyrc  .poetryignore  CHANGELOG.md  Makefile  README.md  mypy.ini  packages.txt  pyproject.toml  requirements.txt  ruff.toml  rz-sample.code-workspace  sample-py.code-workspace
.githooks/: post-checkout  post-merge  pre-commit  prepare-commit-msg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SUPPORT.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  ideas.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  ENHANCEMENT.yml  FEATURE_REQUEST.md  QUESTION.md
.github/workflows/: check_token.yml  format-issue-title.yml  issue-branch-sync.yml  lint.yml  publish.yml  security.yml  update-issue-number.yml
.streamlit/: config.toml  secrets.toml
assets/css/: 404.css  faq.css  style.css
assets/images/: __init__.py
docs/: AWS_integration.md  BUILD.md  CLOUD.md  DEPLOYMENT.md  Folder Tree Structure.md  INSTALL.md  POETRY_COMMANDS.md  PUBLISH.md  REFERENCES.md  STORAGE.md  USAGE.md  add-git-hooks.md  package-info.md  setup-for-osx.md  setup-for-windows.md  test_api.md
scripts/: build-and-test.sh  reset.sh  security-publish.sh  setup-hooks.sh  trace_entry.py
src/: __init__.py
src/api/: fast_api.py
src/db/: connection.py
src/features/: greeting.py
src/sample/: __init__.py  __main__.py  cli.py  streamlit_app.py
src/sample/api/: __init__.py  fast_api.py  main.py  routes.py  web_page.py
src/sample/db/: connection.py
src/sample/features/: greeting.py
src/sample/templates/: faq.html
src/sample/utils/: __init__.py  _version.py  constants.py  debug.py  faq.py  helper.py  lint.py  load_messages.py  messages.py  templates.py
src/utils/: __init__.py  _version.py  clean.py  constants.py  faq.py  load_messages.py
templates/: 404.html  base.html  faq.css  faq.html  index.html  share.html  style.css
