[tool.poetry]
name = "rz-sample"
version = "1.5.0"
description = "A python boilerplate for fastapi and streamlit projects."
authors = ["recursivezero <recursivezero@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "fastapi", "streamlit", "boilerplate"]

# Classifiers help "Verify" your package details on TestPyPI
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Code Generators",
  "Operating System :: OS Independent",
]

# Packages configuration
packages = [{ include = "sample", from = "src" }]

# Assets and extra files
include = [
  { path = "src/sample/assets/images/logo.png", format = [
    "sdist",
    "wheel",
  ] },
  { path = "src/sample/templates/**/*", format = [
    "sdist",
    "wheel",
  ] },
]

[tool.poetry.urls]
"Homepage" = "https://github.com/recursivezero/sample-py"
"Documentation" = "https://github.com/recursivezero/sample-py#readme"
"Repository" = "https://github.com/recursivezero/sample-py.git"
"Issues" = "https://github.com/recursivezero/sample-py/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.121.1,<0.122.0"
streamlit = ">=1.49.0"
python-box = ">=7.3.2,<8.0.0"
uvicorn = ">=0.40.0,<0.41.0"
bs4 = ">=0.0.2,<0.0.3"
dotenv = ">=0.9.9,<0.10.0"
pydantic = ">=2.12.5,<3.0.0"
click = ">=8.3.1,<9.0.0"
pymongo = { version = ">=4.15.5,<5.0.0", optional = true }

[tool.poetry.extras]
mongo = ["pymongo"]

[tool.poetry.scripts]
sample = "sample.cli:cli"
lint = "sample.utils.lint:main"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pip-audit = "^2.9.0"
pipreqs = "0.5.0"
ruff = "0.5.3"
twine = "^6.2.0"
vulture = "^2.3"
deptry = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Specific Configurations ---

[tool.flake8]
max_line_length = 190

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[tool.poetry-audit]
ignore = []

[tool.deptry]
known_first_party = ["sample"]

[tool.ruff]
line-length = 88
target-version = "py311"
